top banner added

--- a/index.html
+++ b/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sifat Portfolio </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Shaid Bin Md. Sifat</span><br> World !</br></h1>
+            <h3>Build Climber and Train Stopper </h3>
+            <p>I am Full-Stack Python developer . I am an enthusiastic Software Engineer and a
+                Developer looking to build a high profile ca-
+                reer with my skills to build and deploy high-
+                end systems for both web and computer
+                applications.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/shaidsifat/">Hire Me</a>
 
+        </div>
 
+        <div class="half-width">
+            <img src="images/sifat background.png" alt="">
 
-
+        </div>
+    </section>
 </body>
+
 </html>
