--- a/index.html
+++ b/index.html
@@ -32,6 +32,32 @@
 
         </div>
     </section>
+
+    <section class="dream-big">
+
+        <div class="half-width">
+
+            <img src="images/sifat background.png" alt="">
+        </div>
+
+        <div class="half-width">
+
+            <h1>Dream Big </h1>
+            <h2>Become a web Developer</h2>
+            <p> I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
+                how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank"
+                href="https://www.linkedin.com/in/shaidsifat/detail/overlay-view/urn:li:fsd_profileTreasuryMedia:(ACoAAB8HW9oBM4is1wgWP4ZGOVCKrIUyMCXcRGk,1635462168262)/">
+                DOWNLOAD CV </a>
+
+        </div>
+
+
+
+    </section>
+
+
+
 </body>
 
 </html>
