--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner  flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Shaid Bin Md. Sifat</span><br> World !</br></h1>
@@ -33,7 +33,7 @@
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-area">
 
         <div class="half-width">
 
@@ -52,12 +52,40 @@
 
         </div>
 
-
-
     </section>
 
 
 
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div class="half-width" id="full-stack">
+            <h2>Full Stack Web Developer</h2>
+            <h3>2021-Present | Pro Level Developer</h3>
+            <p> I am Full Full-Stack Python Developer . I know HTML,CSS and JAVASCRIPT,PYTHON. I can developed
+                frontend
+                and backend part also. I didn't stop with the web.
+                I went beyond with most popular Python framework called Django.I have also knowledge in Django Rest
+                Framework. For Database work with Sqlite3,Mysql,Postgres DataBase.
+                JS.I will give you 100% Full stack Developer solution.
+            </p>
+        </div>
+        <div class="half-width" id="baby-web">
+            <h2>Baby Web Developer</h2>
+            <h3>2020-2021 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed
+                it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+    </section>
+
+
+
+
+
+
+
+    <footer>
+        <p>© Shaid Bin Md. Sifat2021, a Full Stack PYTHON DEVELOPER initiative.</p>
+    </footer>
 </body>
 
 </html>
